# phd-symmetric-cryptography

./: .gitignore  LICENSE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish-crates.yml
code/: Cargo.toml  README.md
code/crates/encoding/: Cargo.toml  README.md
code/crates/encoding/benches/: base_m_len.rs
code/crates/encoding/src/: utf8.rs
code/crates/encoding/tests/: base_m_len_baselines.rs
code/crates/encoding/tests/support/: base_m_len_support.rs
code/crates/ring_crypto/: Cargo.toml  README.md
code/crates/ring_crypto/src/: element.rs  error.rs  gcd.rs  lib.rs  matrix.rs  vector.rs
lean/encoding-dr-1/: EncodingProofs.lean  lake-manifest.json  lakefile.toml
lean/encoding-dr-1/EncodingProofs/BaseMLen/: Examples.lean  Params.lean  Payload.lean  Prefix.lean  Renorm.lean  Spec.lean  Stream.lean
scripts/: check-crates.sh  release-crates.sh
text/: .gitognore
text/encoding/: .gitignore  Makefile  README.md  article.tex  crypto-commands.tex  references.bib  system-security-article.cls
